tests/e2e/assignment_obj.error
Error: syntax error in story at line 1, column 4

1|    {} = ""
         ^^^^

E0073: Objects destructoring requires variable names.
